--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [
     "JavaScript",
@@ -18,5 +19,14 @@
   "dependencies": {
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NicollySantos116/HOGWARTS-API.git"
+  },
+  "bugs": {
+    "url": "https://github.com/NicollySantos116/HOGWARTS-API/issues"
+  },
+  "homepage": "https://github.com/NicollySantos116/HOGWARTS-API#readme"
 }
